# ai_cae_meshing

./: .gitignore  AGENT.md  AGENTS.md  ANSA_REGRESSION_REPORT.md  CAE_MESH_AUTOMATION_IMPLEMENTATION_PLAN.md  CAE_MESH_AUTOMATION_IMPLEMENTATION_PLAN.md.md  FINAL_DELIVERY_REPORT.md  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
ai_mesh_generator/: __init__.py
ai_mesh_generator/amg/: __init__.py  quality_features.py
ai_mesh_generator/config/: __init__.py  load_config.py
ai_mesh_generator/labels/: __init__.py  rule_manifest.py  sizing.py
ansa_scripts/: amg_batch_mesh.py  cdf_batch_mesh.py  common_ansa_utils.py  connector_builder.py
cad_dataset_factory/: __init__.py
cad_dataset_factory/cdf/: __init__.py  cli.py  entity_cli.py  entity_pipeline.py
configs/: amg_config.default.json  cdf_sm_ansa_v1.default.json
configs/amg/: default_mesh_profile.yaml  model_inference.yaml
configs/ansa/: AMG_SHELL_CONST_THICKNESS_V1.json
configs/cdf/: base_indoor_generation_v001.yaml  defect_injection_rule.yaml
contracts/: AMG_BREP_ENTITY_GRAPH_SM_V2.schema.json  AMG_BREP_ENTITY_GRAPH_SM_V3.schema.json  AMG_BREP_GRAPH_SM_V1.schema.json  AMG_CONFIG_SM_V1.schema.json  AMG_FEATURE_OVERRIDES_SM_V1.schema.json  AMG_MANIFEST_SM_V1.schema.json  AMG_SIZE_FIELD_SM_V2.schema.json  CDF_ANSA_EXECUTION_REPORT_SM_V1.schema.json  CDF_ANSA_QUALITY_REPORT_SM_V1.schema.json  CDF_CONFIG_SM_ANSA_V1.schema.json  CDF_EDGE_SEGMENTATION_SM_V2.schema.json  CDF_ENTITY_QUALITY_EVALUATION_SM_V2.schema.json  CDF_FACE_SEGMENTATION_SM_V2.schema.json  CDF_FEATURE_TRUTH_SM_V1.schema.json  CDF_MESH_SIZE_FIELD_SM_V2.schema.json  CDF_PART_CLASS_LABEL_SM_V2.schema.json
docs/: AGENT.md  AMG.md  ANSA_INTEGRATION.md  ARCHITECTURE.md  CDF.md  CONTRACTS.md  DATASET.md  DECISIONS.md  DEVELOPMENT_RULES.md  MODEL_PLAN.md  NEXT_AGENT_PROMPT.md  README.md  RISK_REGISTER.md  ROADMAP.md  RUNBOOK.md  STATUS.md  TASKS.md  TESTING.md  ansa_backend_spec.md  codex_task_breakdown.md  dataset_spec.md  input_package_spec.md  lg_research_scope_design_guide.md  mesh_recipe_spec.md
schemas/: dataset_manifest.schema.json  graph_schema.json  input_package.schema.json  label.schema.json  material_library.schema.json  mesh_profile.schema.json  mesh_recipe.schema.json  product_tree.schema.json  qa_metric.schema.json  training_dataset_submission.schema.json
scripts/: run_ansa_regression.py  run_full_delivery.py  run_real_dataset_ingestion.py  run_step_ingestion_regression.py
tests/: conftest.py  test_amg_ansa_adapter_interface.py  test_amg_dataset_loader.py  test_amg_deterministic_manifest.py  test_amg_fresh_quality_proposal.py  test_amg_input_validation.py  test_amg_model_skeleton.py  test_amg_quality_benchmark.py  test_amg_quality_candidate_diagnostics.py  test_amg_quality_recommendation.py  test_amg_quality_training.py  test_amg_real_dataset_training.py  test_amg_real_mesh_inference.py  test_amg_real_pipeline_benchmark.py  test_amg_training_smoke.py  test_brep_entity_ai_meshing_pipeline.py  test_cdf_ansa_internal_script_skeleton.py  test_cdf_ansa_report_parser.py  test_cdf_ansa_runner.py  test_cdf_ansa_runtime_probe.py  test_cdf_ansa_size_field_control.py  test_cdf_aux_label_writer.py  test_cdf_bent_part_generator.py  test_cdf_brep_graph_extractor.py  test_cdf_domain_models.py  test_cdf_e2e_dataset_cli.py  test_cdf_feature_candidate_detector.py  test_cdf_feature_layout_sampler.py  test_cdf_flat_panel_generator.py  test_cdf_manifest_writer.py  test_cdf_mixed_benchmark_profile.py  test_cdf_quality_exploration.py  test_cdf_sample_writer.py  test_cdf_truth_matching_report.py  test_config_loaders.py  test_dependency_boundary.py  test_label_rules.py  test_primary_entity_pipeline_cli.py  test_schema_contracts.py  test_sizing.py
(+238 files in other folders)
