[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cae-meshing"
version = "0.1.0"
description = "AMG/CDF contract-first bootstrap for sheet-metal mesh-control manifests."
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22,<5",
  "pydantic>=2.7,<3"
]

[project.optional-dependencies]
cad = [
  "cadquery>=2.5,<3"
]

[tool.setuptools.packages.find]
include = ["ai_mesh_generator*", "cad_dataset_factory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
markers = [
  "cad_kernel: tests that require CadQuery/OCP STEP generation",
  "requires_ansa: tests that require a real ANSA executable/license",
  "model: tests that require ML framework components"
]
