[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cae-meshing"
version = "0.1.0"
description = "AMG/CDF contract-first bootstrap for sheet-metal mesh-control manifests."
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22,<5",
  "numpy>=1.26,<3",
  "pydantic>=2.7,<3"
]

[project.optional-dependencies]
cad = [
  "cadquery>=2.5,<3"
]
model = [
  "torch>=2,<3"
]

[project.scripts]
cdf = "cad_dataset_factory.cdf.cli:main"
amg-train-real = "ai_mesh_generator.amg.training.real:main"
amg-infer-real = "ai_mesh_generator.amg.inference.real_mesh:main"
amg-benchmark-report = "ai_mesh_generator.amg.benchmark.real_pipeline:main"
amg-train-quality = "ai_mesh_generator.amg.training.quality:main"
amg-quality-benchmark = "ai_mesh_generator.amg.benchmark.quality:main"
amg-recommend-quality = "ai_mesh_generator.amg.recommendation.quality:main"
amg-recommendation-benchmark = "ai_mesh_generator.amg.benchmark.recommendation:main"
amg-propose-quality = "ai_mesh_generator.amg.recommendation.fresh:main"
amg-diagnose-quality-candidates = "ai_mesh_generator.amg.diagnostics.quality_candidates:main"

[tool.setuptools.packages.find]
include = ["ai_mesh_generator*", "cad_dataset_factory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
markers = [
  "cad_kernel: tests that require CadQuery/OCP STEP generation",
  "requires_ansa: tests that require a real ANSA executable/license",
  "model: tests that require ML framework components"
]
