[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cae-meshing"
version = "0.1.0"
description = "CAD-native AI meshing pipeline for sheet-metal B-rep entity size fields."
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22,<5",
  "numpy>=1.26,<3",
  "pydantic>=2.7,<3"
]

[project.optional-dependencies]
cad = [
  "cadquery>=2.5,<3"
]
model = [
  "torch>=2,<3",
  "scikit-learn>=1.4,<2"
]

[project.scripts]
cdf-entity = "cad_dataset_factory.cdf.entity_cli:main"
cdf = "cad_dataset_factory.cdf.cli:main"
amg-train-part-classifier = "ai_mesh_generator.amg.training.part_classifier:main"
amg-train-entity-segmentation = "ai_mesh_generator.amg.training.segmentation:main"
amg-train-quality-surrogate = "ai_mesh_generator.amg.training.quality_surrogate:main"
amg-optimize-size-field = "ai_mesh_generator.amg.optimization.size_field:main"

[tool.setuptools.packages.find]
include = ["ai_mesh_generator*", "cad_dataset_factory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
markers = [
  "cad_kernel: tests that require CadQuery/OCP STEP generation",
  "requires_ansa: tests that require a real ANSA executable/license",
  "model: tests that require ML framework components"
]
